--- a/myFronted/src/app/components/comments/comments.html
+++ b/myFronted/src/app/components/comments/comments.html
@@ -32,9 +32,7 @@
         (click)="sendComment()" 
         [disabled]="commentControl.invalid"
       >
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
-          <path d="M22 2L11 13M22 2l-7 20-4-9-9-4 20-7z" />
-        </svg>
+       <app-icon name="send" [size]="20"></app-icon>
       </button>
     </div>
   </div>
