--- a/myFronted/src/app/components/header/header.html
+++ b/myFronted/src/app/components/header/header.html
@@ -5,7 +5,7 @@
     </button>
     <a class="brand" routerLink="/dashboard" aria-label="דף ראשי">
       <div class="logo-icon" aria-hidden="true">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>
+        <app-icon name="layers" ></app-icon>
       </div>
       <span class="brand-name">NexusFlow</span>
     </a>
