--- a/myFronted/src/app/components/projects/projects.html
+++ b/myFronted/src/app/components/projects/projects.html
@@ -30,7 +30,7 @@
         <div class="card-content">
           <div class="card-top">
             <div class="project-avatar">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+             <app-icon name="home"></app-icon>
             </div>
             <div class="team-tag">צוות #{{ project.team_id }}</div>
           </div>
@@ -53,7 +53,7 @@
         <div class="card-actions">
            <button class="view-btn" (click)="openProjectTasks(project.id)" aria-label="צפה במשימות של {{ project.name }}">
              צפה במשימות
-             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" aria-hidden="true"><polyline points="9 18 15 12 9 6"/></svg>
+             <app-icon name="arrow-right"></app-icon>
            </button>
         </div>
       </div>
