--- a/myFronted/src/app/components/icon/icon.html
+++ b/myFronted/src/app/components/icon/icon.html
@@ -17,7 +17,8 @@
     <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
     }
 
-    @case ('trash') { <path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
+    @case ('trash') { <path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0
+     1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
     </path> }
 
     @case ('users') {
@@ -27,7 +28,8 @@
     <path d="M16 3.13a4 4 0 0 1 0 7.75" />
     }
 
-    @case ('folder') { <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path> }
+    @case ('folder') { <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-
+    2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path> }
 
     @case ('check-circle') { <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
     <polyline points="22 4 12 14.01 9 11.01"></polyline> }
@@ -42,8 +44,9 @@
     @case ('layers') {
     <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" /> }
 
-    @case ('message') { <path
-        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+    @case ('message') { <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0
+         1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38
+          8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
     </path> }
 
     @case ('check') { <path d="M20 6L9 17l-5-5"></path> }
@@ -59,7 +62,7 @@
     <polyline points="17 21 17 13 7 13 7 21"></polyline>
     <polyline points="7 3 7 8 15 8"></polyline>
     }
-    
+
     @default {
     <path d="M0 0h24v24H0z" fill="none" />
     }
