Added last 2 commit

--- a/myFronted/src/app/components/tasks/tasks.html
+++ b/myFronted/src/app/components/tasks/tasks.html
@@ -86,7 +86,7 @@
         </div>
         } @empty {
         <div class="no-data">
-            <div class="empty-icon">✨</div>
+            <div class="empty-icon">📋</div>
             <p>כל המשימות הושלמו. הגיע הזמן לתכנן את היעד הבא.</p>
         </div>
         }
